--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <title>사토시의직감</title>
   <link rel="stylesheet" href="style.css" />
 </head>
+<link rel="icon" href="data:,">
+  
 <body>
   <header class="top">
     <div class="container">
