--- a/index.html
+++ b/index.html
@@ -54,8 +54,7 @@
     </section>
   </main>
 
-  <script src="./js/upbit_ws.js"></script>
-  <script src="./js/scanner.js"></script>
-  <script src="./js/app.js"></script>
+<script type="module" src="./js/app.js"></script>
+
 </body>
 </html>
