--- a/index.html
+++ b/index.html
@@ -55,6 +55,14 @@
   </main>
 
 <script type="module" src="./js/app.js"></script>
+  ...
+  <main class="container">
+    <!-- 내용 동일 -->
+  </main>
 
+  <!-- ✅ 수정된 부분 -->
+  <script type="module" src="./js/app.js"></script>
 </body>
 </html>
+
+
