--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>사토시의지갑</title>
   <link rel="stylesheet" href="./style.css" />
+  <link rel="icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 64 64'%3E%3Ccircle cx='32' cy='32' r='30' fill='%232d7cff'/%3E%3Ctext x='32' y='41' text-anchor='middle' font-size='28' fill='white'%3E%E2%82%A9%3C/text%3E%3C/svg%3E">
+
 </head>
 <body>
   <header class="topbar">
