--- a/index.html
+++ b/index.html
@@ -40,15 +40,16 @@
 
 <section class="panels">
   <div class="panel">
-    <ul id="hot-list"><li>스캔 대기중...</li></ul>
+    <ul id="hot-list"></ul>
   </div>
   <div class="panel">
-    <ul id="warm-list"><li>스캔 대기중...</li></ul>
+    <ul id="warm-list"></ul>
   </div>
   <div class="panel">
-    <ul id="heat-list"><li>스캔 대기중...</li></ul>
+    <ul id="heat-list"></ul>
   </div>
 </section>
+
     
   </main>
 
