--- a/index.html
+++ b/index.html
@@ -1,25 +1,27 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>사토시의지갑</title>
   <link rel="stylesheet" href="./style.css" />
+  <!-- 파비콘(404 방지) -->
   <link rel="icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 64 64'%3E%3Ccircle cx='32' cy='32' r='30' fill='%232d7cff'/%3E%3Ctext x='32' y='41' text-anchor='middle' font-size='28' fill='white'%3E%E2%82%A9%3C/text%3E%3C/svg%3E">
-
 </head>
 <body>
   <header class="topbar">
     <div class="title">사토시의지갑</div>
-    <div id="ws-status" class="badge on">Upbit Connected</div>
+    <div class="badge on">Upbit Connected</div>
   </header>
 
   <main class="container">
+    <!-- 🔍 검색만 남김 -->
     <section class="search">
       <input id="search-input" placeholder="코인명/심볼 입력 (예: 비트, BTC, KRW-BTC)" />
       <button id="search-btn">검색</button>
     </section>
 
+    <!-- 📊 결과 테이블 -->
     <section class="table-wrap">
       <table>
         <thead>
@@ -37,23 +39,9 @@
         </tbody>
       </table>
     </section>
-
-<section class="panels">
-  <div class="panel">
-    <ul id="hot-list"></ul>
-  </div>
-  <div class="panel">
-    <ul id="warm-list"></ul>
-  </div>
-  <div class="panel">
-    <ul id="heat-list"></ul>
-  </div>
-</section>
-
-    
   </main>
 
-  <!-- ✅ 메인 스크립트 -->
+  <!-- 모듈 스크립트 하나만 -->
   <script type="module" src="./js/app.js"></script>
 </body>
 </html>
