--- a/index.html
+++ b/index.html
@@ -14,14 +14,36 @@
   </header>
 
   <main class="container">
-    <!-- 🔍 검색창만 남김 -->
+    <!-- 🔍 검색 -->
     <section class="search">
       <input id="search-input" placeholder="코인명/심볼 입력 (예: 비트, BTC, KRW-BTC)" />
       <button id="search-btn">검색</button>
     </section>
 
-    <!-- 결과/표/패널 전부 삭제됨 -->
+    <!-- 📊 결과 테이블 -->
+    <section class="table-wrap">
+      <table>
+        <thead>
+          <tr>
+            <th>코인명</th>
+            <th>현재가</th>
+            <th>변동률</th>
+            <th>매수</th>
+            <th>매도</th>
+            <th>손절</th>
+            <th>위험도</th>
+            <th>예열시작시간</th>
+            <th>예열종류시간</th>
+            <th>쩔어결론</th>
+          </tr>
+        </thead>
+        <tbody id="result-body">
+          <tr><td colspan="10" class="empty">검색 결과 없음</td></tr>
+        </tbody>
+      </table>
+    </section>
   </main>
 
+  <script type="module" src="./js/app.js"></script>
 </body>
 </html>
