--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
     <!-- 📊 결과 테이블 -->
     <section class="table-wrap">
       <table>
+       <div id="spike-box"></div>
+ 
         <thead>
           <tr>
             <th>코인명</th>
