--- a/index.html
+++ b/index.html
@@ -57,6 +57,38 @@
 </script>
 </body>
 </html>
+<!-- 검색 스크립트 로드 -->
+<script defer src="/js/app.js"></script>
+
+<!-- 버튼/엔터/입력 디바운스 직접 바인딩 -->
+<script>
+  document.addEventListener('DOMContentLoaded', () => {
+    const input = document.getElementById('search-input');
+    const btn   = document.getElementById('search-btn');
+    const tbody = document.getElementById('result-body');
+    if (!input || !btn || !tbody) {
+      console.warn('[search] missing element IDs');
+      return;
+    }
+
+    const act = () => {
+      if (typeof window.runSearch === 'function') {
+        window.runSearch(input.value);
+      } else {
+        console.warn('[search] runSearch not ready yet');
+      }
+    };
+
+    btn.addEventListener('click', act);
+    input.addEventListener('keydown', (e) => { if (e.key === 'Enter') act(); });
+    let t = null;
+    input.addEventListener('input', () => { clearTimeout(t); t = setTimeout(act, 300); });
+
+    console.log('[search] direct wiring complete');
+  });
+</script>
+</body>
+</html>
  
 </body>
 </html>
