--- a/index.html
+++ b/index.html
@@ -32,22 +32,21 @@
   const fmt = new Intl.NumberFormat("ko-KR", { maximumFractionDigits: 2 });
   let meta = [];
 
-  async function getMeta() {
-    if (meta.length) return meta;
-    const r = await fetch(`${API}/market/all`);
-    if (!r.ok) throw new Error("market/all 실패");
-    const j = await r.json();
-    meta = (j.data || []).filter(x => x.market && x.market.startsWith("KRW-"));
-    return meta;
-  }
+async function getMeta() {
+  const r = await fetch("/api/upbit/market/all");
+  if (!r.ok) throw new Error("market/all " + r.status);
+  const j = await r.json();
+  return (j.data || []);
+}
 
-  async function getTickers(markets) {
-    const qs = new URLSearchParams({ markets: markets.join(",") }).toString();
-    const r = await fetch(`${API}/ticker?${qs}`);
-    if (!r.ok) throw new Error("ticker 실패");
-    const j = await r.json();
-    return j.data || j; // 보호적 파싱
-  }
+async function getTickers(markets) {
+  const qs = new URLSearchParams({ markets: markets.join(",") }).toString();
+  const r = await fetch("/api/upbit/ticker?" + qs);
+  if (!r.ok) throw new Error("ticker " + r.status);
+  const j = await r.json();
+  return (j.data || []);
+}
+ 
 
   async function runSearch(q) {
     const $tbody = document.getElementById("result-body");
